<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    android:paddingTop="50dp"
    android:paddingRight="50dp"
    android:paddingLeft="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/beginDate"
            android:layout_width="100dp" />

        <EditText
            android:id="@+id/begin_date"
            android:layout_height="wrap_content"
            android:hint="27/02/2017"
            android:inputType="date"
            android:imeOptions="actionDone"
            android:layout_width="150dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/sort_order"
            android:layout_width="100dp" />

        <Spinner
            android:id="@+id/spnSort"
            android:layout_height="wrap_content"
            android:entries="@array/filter_array"
            android:prompt="@string/filter_prompt"
            android:layout_width="150dp">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingBottom="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/news_desk_value"
            android:layout_width="100dp" />

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <CheckBox
               android:text="@string/arts"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:id="@+id/cbArts" />
           <CheckBox
               android:text="@string/fashion_style"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:id="@+id/cbFashion" />
           <CheckBox
               android:text="@string/sports"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               android:id="@+id/cbSports" />

       </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btnSaveFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save" />

    </LinearLayout>


</LinearLayout>